--- a/ege_game.html
+++ b/ege_game.html
@@ -184,12 +184,7 @@
         }
 
         .level-select-header {
-            text-align: center;
-            padding: 20px;
-            background: rgba(0, 0, 0, 0.3);
-            position: sticky;
-            top: 0;
-            z-index: 10;
+            display: none;
         }
 
         .level-select-header h1 {
@@ -206,7 +201,7 @@
         .path-container {
             position: relative;
             min-height: calc(100vh - 100px);
-            padding: 40px 20px 100px;
+            padding: 0;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
@@ -323,7 +318,7 @@
             flex-direction: column-reverse;
             align-items: center;
             gap: 30px;
-            padding-top: 20px;
+            padding-top: 0;
         }
 
         .level-item {
@@ -2513,5 +2508,7 @@
     </script>
 </body>
 </html>
+
+
 
 
