--- a/ege_game.html
+++ b/ege_game.html
@@ -154,6 +154,8 @@
             overflow-y: auto;
             overflow-x: hidden;
             position: relative;
+            width: 100%;
+            height: 100%;
         }
 
         .level-select-screen::before {
@@ -200,12 +202,18 @@
 
         .path-container {
             position: relative;
-            min-height: calc(100vh - 100px);
+            width: 100%;
+            min-height: 100%;
             padding: 0;
+            padding-bottom: 20px;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
             z-index: 1;
+        }
+        
+        .level-select-screen.with-navbar .path-container {
+            min-height: calc(100% - 60px);
         }
 
         .start-label {
@@ -2508,6 +2516,7 @@
     </script>
 </body>
 </html>
+
 
 
 
