--- a/ege_game.html
+++ b/ege_game.html
@@ -63,7 +63,9 @@
             justify-content: space-around;
             align-items: center;
             padding: 10px 5px;
+            padding-top: calc(10px + env(safe-area-inset-top, 0));
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            margin: 0;
         }
 
         .nav-item {
@@ -122,7 +124,7 @@
 
         /* Отступ для контента под панелью */
         .screen.with-navbar {
-            padding-top: 60px;
+            padding-top: 0;
         }
 
         /* Экраны */
@@ -205,6 +207,7 @@
             width: 100%;
             min-height: 100%;
             padding: 0;
+            padding-top: 60px; /* Отступ для верхней панели навигации */
             padding-bottom: 20px;
             display: flex;
             flex-direction: column;
@@ -213,7 +216,7 @@
         }
         
         .level-select-screen.with-navbar .path-container {
-            min-height: calc(100% - 60px);
+            padding-top: 60px;
         }
 
         .start-label {
@@ -1816,6 +1819,9 @@
                 tg.expand();
                 // Отключаем визуальные эффекты для лучшей производительности
                 tg.enableClosingConfirmation(false);
+                // Скрываем заголовок Telegram WebApp
+                tg.setHeaderColor('#1a1a2e');
+                tg.BackButton.hide();
             }
             
             // Показываем только экран выбора предмета
