--- a/ege_game.html
+++ b/ege_game.html
@@ -66,6 +66,7 @@
             padding-top: calc(10px + env(safe-area-inset-top, 0));
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
             margin: 0;
+            height: auto;
         }
 
         .nav-item {
@@ -207,7 +208,7 @@
             width: 100%;
             min-height: 100%;
             padding: 0;
-            padding-top: 60px; /* Отступ для верхней панели навигации */
+            padding-top: 0;
             padding-bottom: 20px;
             display: flex;
             flex-direction: column;
@@ -216,7 +217,7 @@
         }
         
         .level-select-screen.with-navbar .path-container {
-            padding-top: 60px;
+            padding-top: 0;
         }
 
         .start-label {
@@ -329,7 +330,7 @@
             flex-direction: column-reverse;
             align-items: center;
             gap: 30px;
-            padding-top: 0;
+            padding-top: 60px; /* Отступ для верхней панели навигации */
         }
 
         .level-item {
